CI/CD Pipeline Test

--- a/deployment/backend-service.yaml
+++ b/deployment/backend-service.yaml
@@ -7,6 +7,6 @@ spec:
   selector:
     app: backend
   ports:
-  - port: 80
-    targetPort: 8081
-    nodePort: 30000
+    - name: http
+        port: 80
+        targetPort: 8081
