--- a/deployment/backend-service.yaml
+++ b/deployment/backend-service.yaml
@@ -7,6 +7,6 @@ spec:
   selector:
     app: backend
   ports:
-    - name: http
-        port: 80
-        targetPort: 8081
+  - port: 8081
+    targetPort: 8081
+    nodePort: 30000
