--- a/deployment/backend-service.yaml
+++ b/deployment/backend-service.yaml
@@ -7,6 +7,7 @@ spec:
   selector:
     app: backend
   ports:
-  - port: 8081
-    targetPort: 8081
-    nodePort: 30000
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 8081
