--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -16,6 +16,6 @@ spec:
         - name: gitlab-registry
       containers:
       - name: backend
-        image: registry.gitlab.com/unsalsenturkk/web-based-todo-list-backend:$CI_COMMIT_SHORT_SHA
+        image: registry.gitlab.com/unsalsenturkk/web-based-todo-list-backend:latest
         ports:
         - containerPort: 8081
