--- a/deployment/backend-secret.yaml
+++ b/deployment/backend-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gitlab-registry
+  name: gitlab-registry-backend
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: eyJhdXRocyI6eyJyZWdpc3RyeS5naXRsYWIuY29tIjp7ImF1dGgiOiJaMmwwYkdGaUsyUmxjR3h2ZVMxMGIydGxiaTA0TkRBeE1EUTZaQzFuVTNjMVgwVnJRVWN5UzBSalVUZGZlVE09In19fQ==
